--- a/biometric/build.gradle
+++ b/biometric/build.gradle
@@ -36,13 +36,13 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
 }
-dependencyCheck {
-    failOnError = false
-}
+//dependencyCheck {
+//    failOnError = false
+//}
 afterEvaluate {
     android.libraryVariants.all { v ->
         if (v.buildType.name == "release") {
-            v.assemble.finalizedBy(dependencyCheckAnalyze)
+//            v.assemble.finalizedBy(dependencyCheckAnalyze)
             v.assemble.doFirst {
                 def f = new File("$projectDir/src/main/assets/by_brand.json")
                 println("Path" + f.absolutePath)
@@ -75,69 +75,69 @@ afterEvaluate {
  *   limitations under the License.
  */
 
-// Generate Source Jar
-task sourceJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier "sources"
-}
-
-// Create the publication with the pom configuration
-publishing {
-    publications {
-        // Create different publications for every build types (debug and release)
-        android.buildTypes.all { variant ->
-            // Dynamically creating publications name
-            "${variant.name}Aar"(MavenPublication) {
-
-                // Artifact properties
-                groupId libsGroupId
-                version = libVersion
-                artifactId libArtifactId_biometric
-
-                // Tell maven to prepare the generated "*.aar" file for publishing
-                artifact("$buildDir/outputs/aar/${artifactId}-${variant.name}.aar")
-
-                pom.withXml {
-
-                    //Creating additional node for dependencies
-                    def dependenciesNode = asNode().appendNode('dependencies')
-
-                    def dependencyBiometricApi = dependenciesNode.appendNode('dependency')
-                    dependencyBiometricApi.appendNode('groupId', libsGroupId)
-                    dependencyBiometricApi.appendNode('artifactId', libArtifactId_biometric_api + (variant.name == 'debug' ? '-debug' : ''))
-                    dependencyBiometricApi.appendNode('version', version)
-
-                    def dependencyComponent = dependenciesNode.appendNode('dependency')
-                    dependencyComponent.appendNode('groupId', libsGroupId)
-                    dependencyComponent.appendNode('artifactId', libArtifactId_common + (variant.name == 'debug' ? '-debug' : ''))
-                    dependencyComponent.appendNode('version', version)
-
-
-                    //Defining configuration names from which dependencies will be taken (debugCompile or releaseCompile and compile)
-                    def configurationNames = ["${variant.name}Implementation", 'implementation']
-
-                    configurationNames.each { configurationName ->
-                        configurations[configurationName].allDependencies.each {
-                            if (it.version != null && it.version != 'unspecified') {
-                                def dependencyNode = dependenciesNode.appendNode('dependency')
-                                dependencyNode.appendNode('groupId', it.group)
-                                dependencyNode.appendNode('artifactId', it.name)
-                                dependencyNode.appendNode('version', it.version)
-
-                                //If there are any exclusions in dependency
-                                if (it.excludeRules.size() > 0) {
-                                    def exclusionsNode = dependencyNode.appendNode('exclusions')
-                                    it.excludeRules.each { rule ->
-                                        def exclusionNode = exclusionsNode.appendNode('exclusion')
-                                        exclusionNode.appendNode('groupId', rule.group)
-                                        exclusionNode.appendNode('artifactId', rule.module)
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+//// Generate Source Jar
+//task sourceJar(type: Jar) {
+//    from android.sourceSets.main.java.srcDirs
+//    classifier "sources"
+//}
+//
+//// Create the publication with the pom configuration
+//publishing {
+//    publications {
+//        // Create different publications for every build types (debug and release)
+//        android.buildTypes.all { variant ->
+//            // Dynamically creating publications name
+//            "${variant.name}Aar"(MavenPublication) {
+//
+//                // Artifact properties
+//                groupId libsGroupId
+//                version = libVersion
+//                artifactId libArtifactId_biometric
+//
+//                // Tell maven to prepare the generated "*.aar" file for publishing
+//                artifact("$buildDir/outputs/aar/${artifactId}-${variant.name}.aar")
+//
+//                pom.withXml {
+//
+//                    //Creating additional node for dependencies
+//                    def dependenciesNode = asNode().appendNode('dependencies')
+//
+//                    def dependencyBiometricApi = dependenciesNode.appendNode('dependency')
+//                    dependencyBiometricApi.appendNode('groupId', libsGroupId)
+//                    dependencyBiometricApi.appendNode('artifactId', libArtifactId_biometric_api + (variant.name == 'debug' ? '-debug' : ''))
+//                    dependencyBiometricApi.appendNode('version', version)
+//
+//                    def dependencyComponent = dependenciesNode.appendNode('dependency')
+//                    dependencyComponent.appendNode('groupId', libsGroupId)
+//                    dependencyComponent.appendNode('artifactId', libArtifactId_common + (variant.name == 'debug' ? '-debug' : ''))
+//                    dependencyComponent.appendNode('version', version)
+//
+//
+//                    //Defining configuration names from which dependencies will be taken (debugCompile or releaseCompile and compile)
+//                    def configurationNames = ["${variant.name}Implementation", 'implementation']
+//
+//                    configurationNames.each { configurationName ->
+//                        configurations[configurationName].allDependencies.each {
+//                            if (it.version != null && it.version != 'unspecified') {
+//                                def dependencyNode = dependenciesNode.appendNode('dependency')
+//                                dependencyNode.appendNode('groupId', it.group)
+//                                dependencyNode.appendNode('artifactId', it.name)
+//                                dependencyNode.appendNode('version', it.version)
+//
+//                                //If there are any exclusions in dependency
+//                                if (it.excludeRules.size() > 0) {
+//                                    def exclusionsNode = dependencyNode.appendNode('exclusions')
+//                                    it.excludeRules.each { rule ->
+//                                        def exclusionNode = exclusionsNode.appendNode('exclusion')
+//                                        exclusionNode.appendNode('groupId', rule.group)
+//                                        exclusionNode.appendNode('artifactId', rule.module)
+//                                    }
+//                                }
+//                            }
+//                        }
+//                    }
+//                }
+//            }
+//        }
+//    }
+//}
