--- a/biometric/build.gradle
+++ b/biometric/build.gradle
@@ -2,9 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
-apply plugin: 'com.github.dcendents.android-maven'
-group = "dev.skomlach"
-
+group = libsGroupId
+version = libVersion
 android {
     compileSdkVersion targetSDK
     defaultConfig {
