--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'maven-publish'
-apply plugin: 'com.github.dcendents.android-maven'
-group = "dev.skomlach"
+group = libsGroupId
+version = libVersion
 android {
     compileSdkVersion targetSDK
     defaultConfig {
